src/test/deca/syntax/valid/this.deca
class Messi{
      
      int x = this;
}