src/test/deca/syntax/invalid/int.deca
//Un int ne peut pas commencer par un 0

{
    int x = 0487;
}